# SENTINELA

./: README.md  requirements.txt
fast_sentinela/: README.md  pyproject.toml
fast_sentinela/fast_sentinela/: app.py
fast_sentinela/fast_sentinela/controller/: ImageController.py  PredictController.py
fast_sentinela/fast_sentinela/dto/: PredictRequestDTO.py
fast_sentinela/fast_sentinela/enum/: RoutesEnum.py
fast_sentinela/fast_sentinela/resources/maps/: MapsFuncs.py
fast_sentinela/fast_sentinela/resources/models/: loader.py  modelo_com_dias_sem_chuva.pkl  modelo_sem_dias_sem_chuva.pkl
