[project]
name = "fast-sentinela"
version = "0.1.0"
description = ""
authors = [
    {name = "SofiaValadares",email = "svc2@cesar.school"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard] (>=0.122.0,<0.123.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "joblib (>=1.3.0,<2.0.0)",
    "imbalanced-learn (>=0.12.0,<0.13.0)",
    "scikit-learn (>=1.4.0,<1.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
